tests/parse-errors/types/template_argument_not_type.cx
struct Box<T> {
    T value;
};

int main() {
    Box<1> value;
    return 0;
}
